<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView style="@style/Text_FragmentTitle"
    	android:text="@string/frag_controllers_title"/>
	<ScrollView android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <RelativeLayout style="@style/Text_FragmentSubTitle_Container">
		        <TextView style="@style/Text_FragmentSubTitle"
			        android:text="@string/frag_controllers_devices"/>
		        <ImageView android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:adjustViewBounds="true"
		            android:clickable="true"
			        android:layout_centerVertical="true"
		            android:layout_toLeftOf="@+id/frag_controllers_img_toggle"
			        android:layout_marginRight="25dp"
		            android:src="@drawable/selector_controllers_refresh"/>
		        <ImageView android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:id="@id/frag_controllers_img_toggle"
		            android:adjustViewBounds="true"
		            android:layout_alignParentRight="true"
		            android:clickable="true"
		            android:layout_marginRight="19dp"
			        android:layout_centerVertical="true"
		            android:src="@drawable/selector_controllers_toggleopened"/>
		    </RelativeLayout>
		    <LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/frag_controllers_container_devices"/>
		    <LinearLayout android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:visibility="gone"
			    android:id="@+id/frag_controllers_container_actions"
			    android:orientation="vertical">
			    <RelativeLayout style="@style/Text_FragmentSubTitle_Container">
				    <TextView style="@style/Text_FragmentSubTitle"
				        android:text="@string/frag_controllers_actions"/>
			    </RelativeLayout>
			    <Button android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:id="@+id/frag_controllers_button_details"
			        android:text="@string/frag_controllers_details"
			        android:layout_margin="3dp"/>
			    <Button android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:id="@+id/frag_controllers_button_ping"
			        android:text="@string/frag_controllers_ping"
			        android:layout_margin="3dp"/>
			    <Button android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:id="@+id/frag_controllers_button_start"
			        android:text="@string/frag_controllers_start"
			        android:layout_margin="3dp"/>
			    <Button android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:id="@+id/frag_controllers_button_stop"
			        android:text="@string/frag_controllers_stop"
			        android:layout_margin="3dp"/>
			    <Button android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:id="@+id/frag_controllers_button_file"
			        android:text="@string/frag_controllers_file"
			        android:layout_margin="3dp"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>